tests/snapshots/test_runner__tests__compiler__tokenize__unterminated_comment_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
/ hello

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/tokenize/unterminated_comment_1.kk:1:1
  │
1 │ / hello
  │ ^^ Syntax error: Unterminated comment
  │
  = Comments must start with two slashes. Consider adding a slash (/) after here.
