tests/snapshots/test_runner__tests__compiler__tokenize__unterminated_string_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x = "hello world

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/tokenize/unterminated_string_1.kk:1:9
  │
1 │   let x = "hello world
  │ ╭─────────^
2 │ │
  │ ╰^ Syntax error: unterminated string literal
  │
  = This string is not terminated, try adding double quote (") after here.
